--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -19,8 +19,7 @@ In their article, Violle et al. (2016) introduced 4 indices to compute functiona
 
 The following figure show the 4 aspects covered by the metrics. Rarity is thus considered at local and regional scales and also from abundance and functional point of views. The name of the package functions are written underneath metrics' names.
 
-![Rarity indices and corresponding functions.](F:/PIERRE_DENELLE/Functional_rarity/outlier_scheme.png)
-<img src="outlier_scheme.png" width="80%">
+![Rarity indices and corresponding functions.](outlier_scheme.png)
 
 # Dataset example
 
